--- a/index.html
+++ b/index.html
@@ -33,30 +33,10 @@
    <!-- Uncomment the line below to enable GLaDOS testing. -->
    <script type="text/javascript" src="http://alanclasses.github.io/TSOS/test/glados-ip0.js"></script>
 
-    <!-- host display -->
-    <script>
-      function updateDateTime() {
-         const currentDate = new Date().toLocaleDateString();
-         const currentTime = new Date().toLocaleTimeString();
-         document.getElementById("currentDate").textContent = currentDate;
-         document.getElementById("currentTime").textContent = currentTime;
-      }
-   
-      // Call the updateDateTime function when the document loads and then every second
-      onload = function () {
-         onDocumentLoad();
-         updateDateTime();
-         setInterval(updateDateTime, 1000);
-      };
-   </script>
-
-   
-   
 </head>
 
 <body onload="onDocumentLoad()">
 
-   
 <div id="divMain" style="width:100%;">
 
    <div id="divButtonBar" style="margin:4px;">
@@ -87,12 +67,28 @@
              onclick="TSOS.Control.hostBtnReset_click(this);">
    </div>
 
-   <div id="headerBar">
+   <div id="statusBar">
       <p>Date: <span id="currentdate"></span></p>
-      <p>Time: <span id = "currenttime"></span></p>
+      <p>Time: <span id="currenttime"></span></p>
       <p>Status: <span id="status"></span></p>
-      <p>Youssef's Machine</p>
    </div>
+   
+   <script>
+      function updateDateTime() {
+         const currentDate = new Date().toLocaleDateString();
+         const currentTime = new Date().toLocaleTimeString();
+         document.getElementById("currentdate").textContent = currentDate;
+         document.getElementById("currenttime").textContent = currentTime;
+      }
+   
+      onload = function () {
+         onDocumentLoad();
+         updateDateTime();
+         setInterval(updateDateTime, 1000);  // The point of the (1000) is just a time interval  to continuously update the displayed date and time on the webpage.
+      };
+   </script>
+   
+
 
    <div id="divConsole" style="margin:4px; width:500px; height:500px; float:left;">
       <canvas id="display"
