Trying to add a scrolling feature to handle when a new line is added

--- a/index.html
+++ b/index.html
@@ -89,12 +89,11 @@
    </script>
    
 
-
-   <div id="divConsole" style="margin:4px; width:500px; height:500px; float:left;">
+   <div id="divConsole" style="margin:4px; width:500px; height:500px; float:left; overflow:auto;">
       <canvas id="display"
               width="500px"
-              height="800px"
-              tabindex="3">
+              height="800px"   
+              tabindex="3"> 
       </canvas>
    </div>
   
@@ -132,6 +131,7 @@
    Reproduction is inhibited without the express written consent of
    Ted Codd, Stevie Ray Vaughan, and Ian Fleming.
 </p>
+
 
 </body>
 </html>
