--- a/index.html
+++ b/index.html
@@ -91,8 +91,9 @@
 
    <div id="divConsole" style="margin:4px; width:500px; height:500px; float:left; overflow:auto;">
       <canvas id="display"
-              width="500px"
-              height="800px"   
+              width="640px"
+              height="520px"   
+              style="position: absolute; top: 0;"
               tabindex="3"> 
       </canvas>
    </div>
