comment about my status

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       }
 
       function setStatus() {
-        document.getElementById("status").textContent = " Welcome back. Your currently 🟢Online";
+        document.getElementById("status").textContent = " Welcome back. Your currently 🟢Online"; //Not as cool as I thought it would look 
       }
    
       onload = function () {
