--- a/index.html
+++ b/index.html
@@ -131,6 +131,19 @@
    </div>
 </div>
 
+
+   <div id="divMemoryTable" >
+      <h5>Memory</h5>
+      <table id = "memorytable" >
+         <tbody>
+
+         </tbody>
+      </table>
+
+   </div>
+   
+
+
 <p class="footerText" style="clear:both;">
    <br>
    Copyright &copy; 2008 - 2019 No Rights Reserved.
