Made the memory table, with 32 rows. Wowzers

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
    <script type="text/javascript" src="distrib/host/control.js"></script>
    <script type="text/javascript" src="distrib/host/devices.js"></script>
    <script type="text/javascript" src="distrib/host/cpu.js"></script>
+   <script type="text/javascript" src="distrib/host/memory.js"></script>
 
    <!-- Virtual OS Routines: Make sure Kernel code is last, since it needs those above it. -->
    <script type="text/javascript" src="distrib/os/interrupt.js"></script>
@@ -131,16 +132,20 @@
    </div>
 </div>
 
-
+   
    <div id="divMemoryTable" >
       <h5>Memory</h5>
       <table id = "memorytable" >
-         <tbody>
-
+         <tbody> 
+            <tr>
+               <td></td>
+               <td></td>
+            </tr>
+            <tr>
+               <td></td>
+               <td></td>
+            </tr>
          </tbody>
-      </table>
-
-   </div>
    
 
 
