--- a/index.html
+++ b/index.html
@@ -135,6 +135,10 @@
    </table>
 </div>
 
+<!--User was indented onto memory, found this to help: https://www.w3schools.com/howto/howto_css_clearfix.asp -->
+<div class="clearfix" style="clear:both;"></div>
+
+
 
    <div id="divUserProgramInput" style="margin-left:520px; ">
       <label>
