--- a/index.html
+++ b/index.html
@@ -136,6 +136,57 @@
    </table>
 </div>
 
+
+
+
+   <div id="divProcessTable" style="margin-left:50px;">
+      <h5>Processes</h5>
+      <table id="processTable">
+         <thead>
+            <tr>
+               <th>PID</th>
+               <th>PC</th>
+               <th>IR</th>
+               <th>ACC</th>
+               <th>X</th>
+               <th>Y</th>
+               <th>Z</th>
+               <th>Priority</th>
+               <th>State</th>
+               <th>Location</th>
+            </tr>
+         </thead>
+         <tbody>
+            <tr>
+               <td>001</td>
+               <td>0x002F</td>
+               <td>0xA9</td>
+               <td>0x03</td>
+               <td>0x00</td>
+               <td>0x01</td>
+               <td>0</td>
+               <td>Low</td>
+               <td>Running</td>
+               <td>Memory</td>
+            </tr>
+            <tr>
+               <td>002</td>
+               <td>0x003A</td>
+               <td>0xE8</td>
+               <td>0x05</td>
+               <td>0x01</td>
+               <td>0x00</td>
+               <td>1</td>
+               <td>High</td>
+               <td>Waiting</td>
+               <td>Memory</td>
+            </tr>
+            <!-- Added these to see how they would display -->
+         </tbody>
+      </table>
+   </div>
+
+
 <!--User was indented onto memory, found this to help: https://www.w3schools.com/howto/howto_css_clearfix.asp -->
 <div class="clearfix" style="clear:both;"></div>
 
@@ -153,6 +204,7 @@
       </label>
    </div>
 </div>
+
 
 
 
