Fixed the designs of the memory table and process table

--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
 
 
    <div id="divProcessTable" style="margin-left:50px;">
-      <h5>Processes</h5>
       <table id="processTable">
+         <caption>Processes</caption>
          <thead>
             <tr>
                <th>PID</th>
