Removed the tbody so I can add it dynamically, added comments in the cpu

--- a/index.html
+++ b/index.html
@@ -159,13 +159,7 @@
             </tr>
          </thead>
          <tbody>
-            <tr>
-               
-            </tr>
-            <tr>
-              
-            </tr>
-            <!-- Added these to see how they would display -->
+            <!--Dynamically will be added -->
          </tbody>
       </table>
    </div>
