--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
    <script type="text/javascript" src="distrib/host/devices.js"></script>
    <script type="text/javascript" src="distrib/host/cpu.js"></script>
    <script type="text/javascript" src="distrib/host/memory.js"></script>
+   <script type="text/javascript" src="distrib/host/memoryAccessor.js"></script>
 
 
    <!-- Virtual OS Routines: Make sure Kernel code is last, since it needs those above it. -->
