Customizing the memory table

--- a/index.html
+++ b/index.html
@@ -126,14 +126,16 @@
 <div id="divMemoryTable" style="float:left; margin-left:20px; max-height:300px; overflow-y:auto;"> <!-- Removed the absolute positioning and added float:left -->
    <h5>Memory</h5>
    <table id="memorytable">
-       <tbody>
+       <<tbody>
+         <tr>
+             <td>0x000</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td>
+         </tr>
+         <tr>
+             <td>0x008</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td>
+         </tr>
            <tr>
-               <td></td>
-               <td></td>
-           </tr>
-           <tr>
-               <td></td>
-               <td></td>
+               <td>00</td>
+               <td>00</td>
            </tr>
        </tbody>
    </table>
