Updated the initial memory design

--- a/index.html
+++ b/index.html
@@ -126,18 +126,101 @@
 <div id="divMemoryTable" style="float:left; margin-left:20px; max-height:300px; overflow-y:auto;"> <!-- Removed the absolute positioning and added float:left -->
    <h5>Memory</h5>
    <table id="memorytable">
-       <<tbody>
+      <tbody>
+         
          <tr>
-             <td>0x000</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td>
+            <td>0x000</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td>
          </tr>
          <tr>
-             <td>0x008</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td>
+            <td>0x008</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td>
          </tr>
-           <tr>
-               <td>00</td>
-               <td>00</td>
-           </tr>
-       </tbody>
+         <tr>
+            <td>0x010</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td>
+        </tr>
+        <tr>
+            <td>0x018</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td>
+         </tr>
+         <tr>
+            <td>0x020</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td>
+        </tr>
+        <tr>
+         <td>0x028</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td>
+      </tr>
+      <tr>
+         <td>0x030</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td>
+     </tr>
+     <tr>
+      <td>0x038</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td>
+    </tr>
+    <tr>
+      <td>0x040</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td>
+    </tr>
+    <tr>
+      <td>0x048</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td>
+    </tr>
+    <tr>
+      <td>0x050</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td>
+    </tr>
+    <tr>
+      <td>0x058</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td>
+    </tr>
+    <tr>
+      <td>0x060</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td>
+    </tr>
+    <tr>
+      <td>0x068</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td>
+    </tr>
+    <tr>
+      <td>0x070</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td>
+    </tr>
+    <tr>
+      <td>0x078</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td>
+    </tr>
+    <tr>
+      <td>0x080</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td>
+    </tr>
+    <tr>
+      <td>0x088</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td>
+    </tr>
+    <tr>
+      <td>0x090</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td>
+    </tr>
+    <tr>
+      <td>0x098</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td>
+    </tr>
+    <tr>
+      <td>0x0A0</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td>
+    </tr>
+    <tr>
+      <td>0x0A8</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td>
+    </tr>
+    <tr>
+      <td>0x0B0</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td>
+    </tr>
+    <tr>
+      <td>0x0B8</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td>
+    </tr>
+    <tr>
+      <td>0x0C0</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td>
+    </tr>
+    <tr>
+      <td>0x0D0</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td>
+    </tr>
+    <tr>
+      <td>0x0D8</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td>
+    </tr>
+    <tr>
+      <td>0x0E0</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td>
+    </tr>
+    <tr>
+      <td>0x0F0</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td>
+    </tr>
+    <tr>
+      <td>0x0F8</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td><td>00</td>
+    </tr>
+
+  
+      </tbody>
    </table>
 </div>
 
