--- a/index.html
+++ b/index.html
@@ -222,15 +222,47 @@
    </table>
 </div>
 
+<div id="divMemoryTable" style="float:left; margin-left:20px; max-height:300px; overflow-y:auto;">
+  <!-- [your code for Memory Table] -->
+</div>
 
-
-
-
+    <!-- PCB Table -->
+    <div id="divPCBTable" style="float:left; margin-left:20px; max-height:300px; overflow-y:auto;">
+      <h5>Process Controll Table</h5>
+      <table id="pcbtable">
+          <thead>
+              <tr>
+                  <th>PID</th>
+                  <th>Prioty</th>
+                  <th>State</th>
+                  <th>PC</th>
+                  <th>ACC</th>
+                  <th>Xreg</th>
+                  <th>Yreg</th>
+                  <th>Zflag</th>
+                  <th>Memory Location</th>
+              </tr>
+          </thead>
+          <tbody>
+              <!-- Example row -->
+              <tr>
+                  <td>1</td>
+                  <td>99</td>
+                  <td>New</td>
+                  <td>0</td>
+                  <td>0</td>
+                  <td>0</td>
+                  <td>0</td>
+                  <td>0</td>
+                  <td>Memory</td>
+              </tr>
+          </tbody>
+      </table>
+    </div>
 
 
 <!--User was indented onto memory, found this to help: https://www.w3schools.com/howto/howto_css_clearfix.asp -->
 <div class="clearfix" style="clear:both;"></div>
-
 
 
    <div id="divUserProgramInput" style="margin-left:520px; ">
