Finished the CPU file, tweaked the mem acessor, and display tables.

--- a/index.html
+++ b/index.html
@@ -152,6 +152,8 @@
                   <th>Yreg</th>
                   <th>Zflag</th>
                   <th>Memory Location</th>
+                  <th>Running</th>
+
               </tr>
           </thead>
           <tbody id = "pcbtablebody">
@@ -173,7 +175,11 @@
                    id  ="taProgramInput"
                    rows="8"
                    cols="48"
-         ></textarea>
+         >
+      
+         A9 01 A9 02 A9 03 A9 04 A9 05 A9 01 A9 02 A9 03 A9 04 A9 05 A9 01 A9 02 A9 03 A9 04 A9 05 A9 01 A9 02 A9 03 A9 04 A9 05 A9 01 A9 02 A9 03 A9 04 A9 05 00
+      
+      </textarea>
       </label>
    </div>
 </div>
