Made a CPU table in the html

--- a/index.html
+++ b/index.html
@@ -185,6 +185,33 @@
 </div>
 
 
+<div id="divCPUTable" style="float:left; margin-left:20px; max-height:150px;">
+   <h5>CPU Information</h5>
+   <table id="cputable" >
+       <thead>
+           <tr>
+               <th>PC</th>
+               <th>IR</th>
+               <th>ACC</th>
+               <th>Xreg</th>
+               <th>Yreg</th>
+               <th>Zflag</th>
+           </tr>
+       </thead>
+       <tbody id="cputablebody">
+           <tr>
+               <td id="cpuPC">-</td>
+               <td id="cpuIR">-</td>
+               <td id="cpuACC">-</td>
+               <td id="cpuX">-</td>
+               <td id="cpuY">-</td>
+               <td id="cpuZ">-</td>
+           </tr>
+       </tbody>
+   </table>
+</div>
+
+
 
 
 <p class="footerText" style="clear:both;">
