Updated the memory table and cpu display again

--- a/index.html
+++ b/index.html
@@ -148,12 +148,12 @@
        </thead>
        <tbody id="cputablebody">
            <tr>
-               <td id="cpuPC">-</td>
-               <td id="cpuIR">-</td>
-               <td id="cpuACC">-</td>
-               <td id="cpuX">-</td>
-               <td id="cpuY">-</td>
-               <td id="cpuZ">-</td>
+               <td id="cpuPC">00</td>
+               <td id="cpuIR">00</td>
+               <td id="cpuACC">00</td>
+               <td id="cpuX">00</td>
+               <td id="cpuY">00</td>
+               <td id="cpuZ">00</td>
            </tr>
        </tbody>
    </table>
@@ -162,7 +162,7 @@
 
 
 
-<div id="divLog" style="float:left; margin-bottom:85px;">
+<div id="divLog" style="float:left; margin-bottom:100px;">
    <label>
       Host Log
       <br>
@@ -204,16 +204,6 @@
 
 
 
-
-
-    <p class="footerText" style="clear:both; margin-top:100px">
-      <br>
-      Copyright &copy; 2008 - 2019 No Rights Reserved.
-      <br>
-      Reproduction is inhibited without the express written consent of
-      Ted Codd, Stevie Ray Vaughan, and Ian Fleming.
-   </p>
-   
 
 
 </body>
