--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
    <script type="text/javascript" src="distrib/os/kernel.js"></script>
    <script type="text/javascript" src="distrib/os/pcb.js"></script>
    <script type="text/javascript" src="distrib/os/memorymanager.js"></script>
+   <script type="text/javascript" src="distrib/os/scheduler.js"></script>
 
    <!-- Other Routines -->
    <script type="text/javascript" src="distrib/utils.js"></script>
