Debugging quantum bug, when Quantum < 4, bad things happen

--- a/index.html
+++ b/index.html
@@ -200,7 +200,29 @@
    </table>
  </div>
 
+ <!-- ProcessQueue Table -->
+ <div id="divProcessTable" style="float:left; max-height:100px; margin-left: 50px;">
+   <h5>Ready Queue</h5>
+   <table id="queuetable">
+       <thead>
+           <tr>
+               <th>PID</th>
+               <th>Prioty</th>
+               <th>IR</th>
+               <th>PC</th>
+               <th>ACC</th>
+               <th>Xreg</th>
+               <th>Yreg</th>
+               <th>Zflag</th>
+               <th>Memory Location</th>
+               <th>Running</th>
 
+           </tr>
+       </thead>
+       <tbody id = "queuetablebody">
+       </tbody>
+   </table>
+ </div>
 
 
       
