Fixed extra 0 bug when program executes, fixed ready queue table

--- a/index.html
+++ b/index.html
@@ -208,14 +208,12 @@
            <tr>
                <th>PID</th>
                <th>Prioty</th>
-               <th>IR</th>
-               <th>PC</th>
-               <th>ACC</th>
-               <th>Xreg</th>
-               <th>Yreg</th>
-               <th>Zflag</th>
-               <th>Memory Location</th>
-               <th>Running</th>
+               <th>Location</th>
+               <th>Segment</th>
+               <th>Base</th>
+               <th>Limit</th>
+               <th>State</th>
+               <th>Quantum</th>
 
            </tr>
        </thead>
