Added comments my sake

--- a/index.html
+++ b/index.html
@@ -200,9 +200,9 @@
    </table>
  </div>
 
- <!-- ProcessQueue Table -->
+ <!-- Ready Queue Table -->
  <div id="divProcessTable" style="float:left; max-height:100px; margin-left: 50px;">
-   <h5>Ready Queue</h5>
+   <h5>Ready Queue Table</h5>
    <table id="queuetable">
        <thead>
            <tr>
