--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
    <script type="text/javascript" src="distrib/os/console.js"></script>
    <script type="text/javascript" src="distrib/os/deviceDriver.js"></script>
    <script type="text/javascript" src="distrib/os/deviceDriverKeyboard.js"></script>
+   <script type="text/javascript" src="distrib/os/diskSystemDeviceDriver.js"></script>
+
    <script type="text/javascript" src="distrib/os/queue.js"></script>
    <script type="text/javascript" src="distrib/os/shell.js"></script>
    <script type="text/javascript" src="distrib/os/shellCommand.js"></script>
@@ -222,7 +224,78 @@
    </table>
  </div>
 
-
+ <div id="divDiskTable">
+    <h3>Disk</h3>
+       <table id="diskTable">
+          <tr>
+             <th>T:S:B</th>
+             <th>In Use</th>
+             <th>Next T:S:B</th>
+             <th>Data</th>
+          </tr>
+          <tr>
+             <td>0:0:0</td>
+             <td>0</td>
+             <td>0:0:0</td>
+             <td>000000000000000000000000000000000000000000000000000000000000</td>
+          </tr>
+          <tr>
+             <td>0:0:0</td>
+             <td>0</td>
+             <td>0:0:0</td>
+             <td>000000000000000000000000000000000000000000000000000000000000</td>
+          </tr>
+          <tr>
+             <td>0:0:0</td>
+             <td>0</td>
+             <td>0:0:0</td>
+             <td>000000000000000000000000000000000000000000000000000000000000</td>
+          </tr>
+          <tr>
+             <td>0:0:0</td>
+             <td>0</td>
+             <td>0:0:0</td>
+             <td>000000000000000000000000000000000000000000000000000000000000</td>
+          </tr>
+          <tr>
+             <td>0:0:0</td>
+             <td>0</td>
+             <td>0:0:0</td>
+             <td>000000000000000000000000000000000000000000000000000000000000</td>
+          </tr>
+          <tr>
+             <td>0:0:0</td>
+             <td>0</td>
+             <td>0:0:0</td>
+             <td>000000000000000000000000000000000000000000000000000000000000</td>
+          </tr>
+          <tr>
+             <td>0:0:0</td>
+             <td>0</td>
+             <td>0:0:0</td>
+             <td>000000000000000000000000000000000000000000000000000000000000</td>
+          </tr>
+          <tr>
+             <td>0:0:0</td>
+             <td>0</td>
+             <td>0:0:0</td>
+             <td>000000000000000000000000000000000000000000000000000000000000</td>
+          </tr>
+          <tr>
+             <td>0:0:0</td>
+             <td>0</td>
+             <td>0:0:0</td>
+             <td>000000000000000000000000000000000000000000000000000000000000</td>
+          </tr>
+          <tr>
+             <td>0:0:0</td>
+             <td>0</td>
+             <td>0:0:0</td>
+             <td>000000000000000000000000000000000000000000000000000000000000</td>
+          </tr>
+       </table>
+    </div>
+ </div>
       
 
 </body>
