--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
    <script type="text/javascript" src="distrib/os/pcb.js"></script>
    <script type="text/javascript" src="distrib/os/memorymanager.js"></script>
    <script type="text/javascript" src="distrib/os/scheduler.js"></script>
+   <script type="text/javascript" src="distrib/os/diskDisplay.js"></script>
+
 
    <!-- Other Routines -->
    <script type="text/javascript" src="distrib/utils.js"></script>
@@ -233,66 +235,10 @@
              <th>Next T:S:B</th>
              <th>Data</th>
           </tr>
-          <tr>
-             <td>0:0:0</td>
-             <td>0</td>
-             <td>0:0:0</td>
-             <td>000000000000000000000000000000000000000000000000000000000000</td>
-          </tr>
-          <tr>
-             <td>0:0:0</td>
-             <td>0</td>
-             <td>0:0:0</td>
-             <td>000000000000000000000000000000000000000000000000000000000000</td>
-          </tr>
-          <tr>
-             <td>0:0:0</td>
-             <td>0</td>
-             <td>0:0:0</td>
-             <td>000000000000000000000000000000000000000000000000000000000000</td>
-          </tr>
-          <tr>
-             <td>0:0:0</td>
-             <td>0</td>
-             <td>0:0:0</td>
-             <td>000000000000000000000000000000000000000000000000000000000000</td>
-          </tr>
-          <tr>
-             <td>0:0:0</td>
-             <td>0</td>
-             <td>0:0:0</td>
-             <td>000000000000000000000000000000000000000000000000000000000000</td>
-          </tr>
-          <tr>
-             <td>0:0:0</td>
-             <td>0</td>
-             <td>0:0:0</td>
-             <td>000000000000000000000000000000000000000000000000000000000000</td>
-          </tr>
-          <tr>
-             <td>0:0:0</td>
-             <td>0</td>
-             <td>0:0:0</td>
-             <td>000000000000000000000000000000000000000000000000000000000000</td>
-          </tr>
-          <tr>
-             <td>0:0:0</td>
-             <td>0</td>
-             <td>0:0:0</td>
-             <td>000000000000000000000000000000000000000000000000000000000000</td>
-          </tr>
-          <tr>
-             <td>0:0:0</td>
-             <td>0</td>
-             <td>0:0:0</td>
-             <td>000000000000000000000000000000000000000000000000000000000000</td>
-          </tr>
-          <tr>
-             <td>0:0:0</td>
-             <td>0</td>
-             <td>0:0:0</td>
-             <td>000000000000000000000000000000000000000000000000000000000000</td>
-          </tr>
+          <tbody id = "disktablebody">
+         </tbody>
+          
+          
        </table>
     </div>
  </div>
